# zeromount

./: .gitignore  CHANGELOG.md  CONTEXT.md  Cargo.toml  DECISIONS.md  README.md  SECURITY.md  update.json
.claude/: CLAUDE.md  features.json  handoff-2026-01-29-detection-bypass.md  session-roundup.md
.claude/project-database/: README.md  function-index.json  index.md  integration-map.md  susfs-reference.md  zeromount-reference.md
.github/workflows/: build.yaml  build.yml  gki-build-lkm.yaml  gki-kernel.yaml  ngki-build-lkm.yaml  ngki-kernel.yaml
docs/: ARCHITECTURE.md  CHECKLIST.md  DECISION-GATE.md  DECISIONS-MATRIX.md  DECISIONS.md  DESIGN.md  DOMAIN.md  FOCUS.md  GOAL.md  LEARNINGS.md  OUTSTANDING-ISSUES.md  SETUP.md  TEAM-PLANNING.md
docs/optional/: TARGET_ANALYSIS.md
docs/verification/: kernel-verification.md  ksu-verification.md  mount-verification.md  susfs-verification.md  v1-verification.md  webui-verification.md
module/: action.sh  boot-completed.sh  common.sh  customize.sh  install_func.sh  install_i18n.sh  logging.sh  metainstall.sh  metamount.sh  metauninstall.sh  module.prop  monitor.sh  post-fs-data.sh  prop_table.sh  sepolicy.rule  service.sh  susfs_integration.sh  sync.sh  uninstall.sh  zm-arm  zm-arm64  zm-diag.sh
module/webroot/: index.html
module/webroot-beta/: index.html
module/zygisk/: CMakeLists.txt
module/zygisk-hook/: settings.gradle
module/zygisk/src/: settings_hook.cpp
nuke_ext4_lkm/: Kconfig  Makefile  nuke.c
patches/: README.md  fix-zeromount-susfs-bypass.sh  inject-susfs-kstat-redirect.sh  inject-susfs-mount-display.sh  inject-susfs-supercall-dispatch.sh  inject-zeromount-dpath.sh  inject-zeromount-namei.sh  inject-zeromount-readdir.sh  inject-zeromount-stat.sh  inject-zeromount-statfs.sh  inject-zeromount-xattr.sh  nomount-kernel-5.4.patch  zeromount-core.patch  zeromount-kernel-5.10.patch
patches/susfs/: fix-susfs-safety.sh  inject-susfs-custom-handlers.sh  inject-susfs-kstat-redirect.sh  inject-susfs-mount-display.sh  inject-susfs-open-redirect-all.sh  inject-susfs-supercall-dispatch.sh  inject-susfs-unicode-filter-func.sh  inject-susfs-vfs-open-redirect-all.sh  inject-susfs-zeromount-coupling.sh  unicode_filter.sh
scripts/: package.sh
src/: build.sh  main.rs  nm.c  zm.c
src/bridge/: brene.rs  mod.rs  susfs4ksu.rs  translate.rs
src/cli/: handlers.rs  mod.rs  webui_init.rs
src/core/: config.rs  mod.rs  pipeline.rs  state.rs  types.rs
src/detect/: kernel.rs  mod.rs  susfs.rs  watcher.rs
src/guard/: markers.rs  mod.rs  monitors.rs  recovery.rs
src/logging/: dump.rs  kmsg.rs  mod.rs  rotating.rs  sysfs.rs
src/modules/: mod.rs  rules.rs  (+1 more)
test/: test_adb_hide.sh
webui/: index.html  index.js  package-lock.json  package.json  pnpm-lock.yaml  styles.css  theme.css  tsconfig.app.json  vite.config.ts
webui-v2-beta/: QA-REPORT-CODE.md  QA-REPORT-FUNCTIONAL.md  QA-REPORT-VISUAL.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
(+262 files in other folders)
