[package]
name = "zeromount"
version = "2.0.59-dev"
edition = "2021"

[dependencies]
clap = { version = "= 4.5.57", features = ["derive"] }
serde = { version = "= 1.0.228", features = ["derive"] }
serde_json = "= 1.0.149"
toml = "= 0.8.23"
rayon = "= 1.11.0"
tracing = "= 0.1.44"
tracing-subscriber = { version = "= 0.3.22", features = ["env-filter"] }
anyhow = "= 1.0.101"
thiserror = "= 2.0.18"
libc = "= 0.2.180"
nix = { version = "= 0.29.0", features = ["ioctl", "signal", "process"] }

[profile.release]
lto = true
strip = true
opt-level = "s"
codegen-units = 1
